# routes/user.routes.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const router = express.Router();
+const { signup } = require("../controllers/user.controller");
+
+router.route("/signup").post(signup);
+
+module.exports = router;
